Asl/src/parser/AslParser.java
// $ANTLR 3.4 /home/marcbenedi/Programs/Asl/src/parser/Asl.g 2017-04-07 17:35:23

package parser;
import interp.AslTree;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


/**
 * Copyright (c) 2011, Jordi Cortadella
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of the <organization> nor the
 *      names of its contributors may be used to endorse or promote products
 *      derived from this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
 * WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL <COPYRIGHT HOLDER> BE LIABLE FOR ANY
 * DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
 * (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
 * LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
 * ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/
@SuppressWarnings({"all", "warnings", "unchecked"})
public class AslParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACORD", "AND", "ARGLIST", "ARMADURA", "ASSIGN", "BEAT", "BOOLEAN", "COMMENT", "COMPAS", "DIV", "DO", "ELSE", "ENDFUNC", "ENDIF", "ENDPIEZZO", "ENDWHILE", "EQUAL", "ESC_SEQ", "EXPR_TIME", "FALSE", "FIGURA", "FIGURA_TEMPO", "FUNC", "FUNCALL", "GE", "GT", "ID", "IF", "INT", "LE", "LIST_FUNCTIONS", "LIST_INSTR", "LT", "MINUS", "MOD", "MODS", "MUL", "NOT", "NOTA_MUSICAL", "NOTES_ACORDS", "NOT_EQUAL", "OR", "PARAMS", "PARAULA_INTENSITAT", "PARAULA_TEMPO", "PARTITURA", "PIEZZO", "PLUS", "PREF", "PREMOD", "PUNTET", "PVALUE", "READ", "REPETICIO", "REP_COMPAS", "REP_OBRIR", "RETURN", "SEPARADOR_COMPAS", "SILENCI", "STRING", "TEMPO", "THEN", "TRUE", "VEGADA", "VEUS", "WHILE", "WRITE", "WS", "'&'", "'('", "')'", "','", "'.'", "':'", "';'", "'Voice'", "'['", "']'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int ACORD=4;
    public static final int AND=5;
    public static final int ARGLIST=6;
    public static final int ARMADURA=7;
    public static final int ASSIGN=8;
    public static final int BEAT=9;
    public static final int BOOLEAN=10;
    public static final int COMMENT=11;
    public static final int COMPAS=12;
    public static final int DIV=13;
    public static final int DO=14;
    public static final int ELSE=15;
    public static final int ENDFUNC=16;
    public static final int ENDIF=17;
    public static final int ENDPIEZZO=18;
    public static final int ENDWHILE=19;
    public static final int EQUAL=20;
    public static final int ESC_SEQ=21;
    public static final int EXPR_TIME=22;
    public static final int FALSE=23;
    public static final int FIGURA=24;
    public static final int FIGURA_TEMPO=25;
    public static final int FUNC=26;
    public static final int FUNCALL=27;
    public static final int GE=28;
    public static final int GT=29;
    public static final int ID=30;
    public static final int IF=31;
    public static final int INT=32;
    public static final int LE=33;
    public static final int LIST_FUNCTIONS=34;
    public static final int LIST_INSTR=35;
    public static final int LT=36;
    public static final int MINUS=37;
    public static final int MOD=38;
    public static final int MODS=39;
    public static final int MUL=40;
    public static final int NOT=41;
    public static final int NOTA_MUSICAL=42;
    public static final int NOTES_ACORDS=43;
    public static final int NOT_EQUAL=44;
    public static final int OR=45;
    public static final int PARAMS=46;
    public static final int PARAULA_INTENSITAT=47;
    public static final int PARAULA_TEMPO=48;
    public static final int PARTITURA=49;
    public static final int PIEZZO=50;
    public static final int PLUS=51;
    public static final int PREF=52;
    public static final int PREMOD=53;
    public static final int PUNTET=54;
    public static final int PVALUE=55;
    public static final int READ=56;
    public static final int REPETICIO=57;
    public static final int REP_COMPAS=58;
    public static final int REP_OBRIR=59;
    public static final int RETURN=60;
    public static final int SEPARADOR_COMPAS=61;
    public static final int SILENCI=62;
    public static final int STRING=63;
    public static final int TEMPO=64;
    public static final int THEN=65;
    public static final int TRUE=66;
    public static final int VEGADA=67;
    public static final int VEUS=68;
    public static final int WHILE=69;
    public static final int WRITE=70;
    public static final int WS=71;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public AslParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public AslParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return AslParser.tokenNames; }
    public String getGrammarFileName() { return "/home/marcbenedi/Programs/Asl/src/parser/Asl.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:1: prog : ( func_o_piezzo )+ EOF -> ^( LIST_FUNCTIONS ( func_o_piezzo )+ ) ;
    public final AslParser.prog_return prog() throws RecognitionException {
        AslParser.prog_return retval = new AslParser.prog_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token EOF2=null;
        AslParser.func_o_piezzo_return func_o_piezzo1 =null;


        AslTree EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_func_o_piezzo=new RewriteRuleSubtreeStream(adaptor,"rule func_o_piezzo");
        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:6: ( ( func_o_piezzo )+ EOF -> ^( LIST_FUNCTIONS ( func_o_piezzo )+ ) )
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:9: ( func_o_piezzo )+ EOF
            {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:9: ( func_o_piezzo )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNC||LA1_0==PIEZZO) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:9: func_o_piezzo
            	    {
            	    pushFollow(FOLLOW_func_o_piezzo_in_prog227);
            	    func_o_piezzo1=func_o_piezzo();

            	    state._fsp--;

            	    stream_func_o_piezzo.add(func_o_piezzo1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog230);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: func_o_piezzo
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 69:28: -> ^( LIST_FUNCTIONS ( func_o_piezzo )+ )
            {
                // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:69:31: ^( LIST_FUNCTIONS ( func_o_piezzo )+ )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(LIST_FUNCTIONS, "LIST_FUNCTIONS")
                , root_1);

                if ( !(stream_func_o_piezzo.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_func_o_piezzo.hasNext() ) {
                    adaptor.addChild(root_1, stream_func_o_piezzo.nextTree());

                }
                stream_func_o_piezzo.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class func_o_piezzo_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func_o_piezzo"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:72:1: func_o_piezzo : ( func | piezzo );
    public final AslParser.func_o_piezzo_return func_o_piezzo() throws RecognitionException {
        AslParser.func_o_piezzo_return retval = new AslParser.func_o_piezzo_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        AslParser.func_return func3 =null;

        AslParser.piezzo_return piezzo4 =null;



        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:72:14: ( func | piezzo )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==FUNC) ) {
                alt2=1;
            }
            else if ( (LA2_0==PIEZZO) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:72:16: func
                    {
                    root_0 = (AslTree)adaptor.nil();


                    pushFollow(FOLLOW_func_in_func_o_piezzo255);
                    func3=func();

                    state._fsp--;

                    adaptor.addChild(root_0, func3.getTree());

                    }
                    break;
                case 2 :
                    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:72:23: piezzo
                    {
                    root_0 = (AslTree)adaptor.nil();


                    pushFollow(FOLLOW_piezzo_in_func_o_piezzo259);
                    piezzo4=piezzo();

                    state._fsp--;

                    adaptor.addChild(root_0, piezzo4.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func_o_piezzo"


    public static class func_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "func"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:75:1: func : FUNC ^ ID params block_instructions ENDFUNC !;
    public final AslParser.func_return func() throws RecognitionException {
        AslParser.func_return retval = new AslParser.func_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token FUNC5=null;
        Token ID6=null;
        Token ENDFUNC9=null;
        AslParser.params_return params7 =null;

        AslParser.block_instructions_return block_instructions8 =null;


        AslTree FUNC5_tree=null;
        AslTree ID6_tree=null;
        AslTree ENDFUNC9_tree=null;

        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:75:6: ( FUNC ^ ID params block_instructions ENDFUNC !)
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:75:8: FUNC ^ ID params block_instructions ENDFUNC !
            {
            root_0 = (AslTree)adaptor.nil();


            FUNC5=(Token)match(input,FUNC,FOLLOW_FUNC_in_func269); 
            FUNC5_tree = 
            (AslTree)adaptor.create(FUNC5)
            ;
            root_0 = (AslTree)adaptor.becomeRoot(FUNC5_tree, root_0);


            ID6=(Token)match(input,ID,FOLLOW_ID_in_func272); 
            ID6_tree = 
            (AslTree)adaptor.create(ID6)
            ;
            adaptor.addChild(root_0, ID6_tree);


            pushFollow(FOLLOW_params_in_func274);
            params7=params();

            state._fsp--;

            adaptor.addChild(root_0, params7.getTree());

            pushFollow(FOLLOW_block_instructions_in_func276);
            block_instructions8=block_instructions();

            state._fsp--;

            adaptor.addChild(root_0, block_instructions8.getTree());

            ENDFUNC9=(Token)match(input,ENDFUNC,FOLLOW_ENDFUNC_in_func278); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "func"


    public static class params_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "params"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:1: params : '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) ;
    public final AslParser.params_return params() throws RecognitionException {
        AslParser.params_return retval = new AslParser.params_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token char_literal10=null;
        Token char_literal12=null;
        AslParser.paramlist_return paramlist11 =null;


        AslTree char_literal10_tree=null;
        AslTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_73=new RewriteRuleTokenStream(adaptor,"token 73");
        RewriteRuleTokenStream stream_74=new RewriteRuleTokenStream(adaptor,"token 74");
        RewriteRuleSubtreeStream stream_paramlist=new RewriteRuleSubtreeStream(adaptor,"rule paramlist");
        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:8: ( '(' ( paramlist )? ')' -> ^( PARAMS ( paramlist )? ) )
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:10: '(' ( paramlist )? ')'
            {
            char_literal10=(Token)match(input,73,FOLLOW_73_in_params297);  
            stream_73.add(char_literal10);


            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:14: ( paramlist )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||LA3_0==72) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:14: paramlist
                    {
                    pushFollow(FOLLOW_paramlist_in_params299);
                    paramlist11=paramlist();

                    state._fsp--;

                    stream_paramlist.add(paramlist11.getTree());

                    }
                    break;

            }


            char_literal12=(Token)match(input,74,FOLLOW_74_in_params302);  
            stream_74.add(char_literal12);


            // AST REWRITE
            // elements: paramlist
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (AslTree)adaptor.nil();
            // 79:29: -> ^( PARAMS ( paramlist )? )
            {
                // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:32: ^( PARAMS ( paramlist )? )
                {
                AslTree root_1 = (AslTree)adaptor.nil();
                root_1 = (AslTree)adaptor.becomeRoot(
                (AslTree)adaptor.create(PARAMS, "PARAMS")
                , root_1);

                // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:79:41: ( paramlist )?
                if ( stream_paramlist.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramlist.nextTree());

                }
                stream_paramlist.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "params"


    public static class paramlist_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramlist"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:83:1: paramlist : param ( ',' ! param )* ;
    public final AslParser.paramlist_return paramlist() throws RecognitionException {
        AslParser.paramlist_return retval = new AslParser.paramlist_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token char_literal14=null;
        AslParser.param_return param13 =null;

        AslParser.param_return param15 =null;


        AslTree char_literal14_tree=null;

        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:83:10: ( param ( ',' ! param )* )
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:83:12: param ( ',' ! param )*
            {
            root_0 = (AslTree)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramlist328);
            param13=param();

            state._fsp--;

            adaptor.addChild(root_0, param13.getTree());

            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:83:18: ( ',' ! param )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==75) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:83:19: ',' ! param
            	    {
            	    char_literal14=(Token)match(input,75,FOLLOW_75_in_paramlist331); 

            	    pushFollow(FOLLOW_param_in_paramlist334);
            	    param15=param();

            	    state._fsp--;

            	    adaptor.addChild(root_0, param15.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (AslTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (AslTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramlist"


    public static class param_return extends ParserRuleReturnScope {
        AslTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:88:1: param : ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) );
    public final AslParser.param_return param() throws RecognitionException {
        AslParser.param_return retval = new AslParser.param_return();
        retval.start = input.LT(1);


        AslTree root_0 = null;

        Token id=null;
        Token char_literal16=null;

        AslTree id_tree=null;
        AslTree char_literal16_tree=null;
        RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try {
            // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:88:9: ( '&' id= ID -> ^( PREF[$id,$id.text] ) |id= ID -> ^( PVALUE[$id,$id.text] ) )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==72) ) {
                alt5=1;
            }
            else if ( (LA5_0==ID) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /home/marcbenedi/Programs/Asl/src/parser/Asl.g:88:13: '&' id= ID
                    {
                    char_literal16=(Token)match(input,72,FOLLOW_72_in_param359);  
                    stream_72.add(char_literal16);


                    id=(Token)match(input,ID,FOLLOW_ID_in_param363);  
                    stream_ID.add(id);


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
